--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,300" rel="stylesheet" type="text/css">
     <title>Test task</title>
-</head>
-<body>
-    
-</body>
+  </head>
+  <body>
+    <div class="container">
+      <div class="img-container">
+        <img alt="avatar" />
+      </div>
+      <div class="olst-container">
+        <h2 class="title">How to Participate</h2>
+        <ol>
+          <li>Subscribe to our News</li>
+          <li><button>SIGN UP</button></li>
+          <li>Check your email inbox</li>
+          <li>Wait till September 22</li>
+        </ol>
+      </div>
+    </div>
+  </body>
 </html>
