--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
         <h2 class="title">How to Participate</h2>
         <ol>
           <li>Subscribe to our News</li>
-          <li><button>SIGN UP</button></li>
+          <li><button class="sign-in-btn">SIGN UP</button></li>
           <li>Check your email inbox</li>
           <li>Wait till September 22</li>
         </ol>
