--- a/src/index.html
+++ b/src/index.html
@@ -29,8 +29,8 @@
     </div>
     <div id="modal" class="modal">
       <div class="modal-content">
-        <form id="signupForm" class="signupForm">
-          <span id="closeModalBtn" class="close">&times;</span>
+       <span id="closeModalBtn" class="close">&times;</span> <form id="signupForm" class="signupForm">
+          
           <h2>
             To register, enter the mail to which our news is sent and set your
             password
