--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
   <body>
     <div class="container">
       <div class="img-container">
-        <img alt="avatar" />
+        <img class="avatar-img" alt="avatar" />
       </div>
       <div class="olst-container">
         <h2 class="title">How to Participate</h2>
