--- a/src/index.html
+++ b/src/index.html
@@ -29,8 +29,8 @@
     </div>
     <div id="modal" class="modal">
       <div class="modal-content">
-       <span id="closeModalBtn" class="close">&times;</span> <form id="signupForm" class="signupForm">
-          
+       <span id="closeModalBtn" class="close">&times;</span> 
+       <form id="signupForm" class="signupForm">
           <h2>
             To register, enter the mail to which our news is sent and set your
             password
@@ -48,7 +48,6 @@
           <p id="emailError" class="emailError hidden">
             Please enter a valid e-mail
           </p>
-
           <div class="input-container">
             <input
               id="password-input"
@@ -62,7 +61,6 @@
           <p id="passwordError" class="passwordError hidden">
             Password must be at least 8 characters
           </p>
-
           <button type="submit">Submit</button>
         </form>
         <div id="thankYouMessage" class="hidden">
